tests/ext/invalid/String_Invalid_1.whiley
import println from whiley.lang.System

define nat as int where $ >= 0

char f(string str, int i):
    return str[i]
    










    
    
    